@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="ftw.mail.mail" meta_type="Dexterity FTI">
+
+    <property name="behaviors" purge="False">
+        <element value="plone.app.lockingbehavior.behaviors.ILocking" />
+    </property>
+
+</object>
